# mullvad-tui

./: .mise.toml  Cargo.toml  Makefile  README.md  REUSE.toml  TODO.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml  smoke-tests.yml
mullvad-tui/: Cargo.toml  build.rs
mullvad-tui/src/: logging.rs  main.rs  test_support.rs
mullvad-tui/src/app/: connection.rs  focus.rs  mod.rs  navigation.rs  operations.rs  relay.rs  session.rs  settings.rs
mullvad-tui/src/app/pages/: account.rs  logs.rs  mod.rs  select_location.rs  select_location_filter.rs  settings.rs  status.rs
mullvad-tui/src/integration/: mod.rs  rpc.rs  tolerant.rs
mullvad-tui/src/tui/: components.rs  error.rs  keybindings.rs  mod.rs
mullvad-tui/src/tui/modals/: account.rs  custom_dns.rs  mod.rs  port.rs  relay_override.rs  split_tunnel.rs  voucher.rs
mullvad-tui/src/tui/overlays/: mod.rs
mullvad-tui/src/tui/pages/: account.rs  logs.rs  mod.rs  select_location.rs  select_location_filter.rs  settings.rs  status.rs
mullvad-tui/src/tui/pages/select_location/: tree.rs
mullvad-tui/src/tui/pages/settings/: anti_censorship.rs  api_access.rs  custom_dns.rs  dns_blockers.rs  relay_overrides.rs
scripts/: check-both-pins.sh
tui-globe/: Cargo.toml  README.md  build.rs
tui-globe/src/: lib.rs
tui-globe/tools/: build_geo.py
